--- a/styles/core.scss
+++ b/styles/core.scss
@@ -106,6 +106,9 @@ td.fc-widget-content {
         padding: 0px;
         border-right: 1px solid #ddd;
     }
+    td.date-of-booking {
+        width: 15%;
+    }
     td.date-cell.date-user {
         width: 150px;
     }
