--- a/views/heatmap.html
+++ b/views/heatmap.html
@@ -1,5 +1,7 @@
 <div class="widget">
     <div class="widget-body">
         Hello mate
+        <cal-heatmap config="{data: heatData, domain:'year', range:1, cellSize:17}"></cal-heatmap>
+
     </div>
 </div>
